Address review feedback on iconreplacer, parallelstart, and LSP
BundlePatcher:
- Group all icon replacements per bundle to apply them in a single
  rebuildJar/update cycle (fixes bug where only the last replacement
  survived per bundle)
- Use FileLocator.getBundleFileLocation() instead of new URL(bundle.getLocation())
  to handle OSGi-specific location prefixes (reference:file:, etc.)
- Use URL(context, spec) constructor for resolving icon folder URLs
  to avoid issues with OSGi-specific URL protocols and toURI()

ParallelStartConfigurator:
- Replace System.out.println with java.util.logging.Logger

AsciidocTextDocumentService:
- Remove overly restrictive ./ and ../ prefix check for internal
  file links, allowing all relative paths to resolve

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>